gabord/spring-reservations#1 | page layout with CSS added

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /.settings
 .classpath
 .project
+src/main/resources/static/images/logo2.png
+src/main/resources/static/images/Logomakr_0Hauwv.png
+src/main/resources/static/images/Logomakr_0Hauwv (2).png
+src/main/resources/static/images/Logomakr_0Hauwv (1).png
